// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Job detail responsive layout > matches 380px mobile snapshot 1`] = `
<div
  data-testid="viewport-root"
  style="width: 380px; max-width: 380px;"
>
  <div
    class="p-6 md:p-8"
  >
    <button
      class="btn btn-ghost btn-sm mb-6"
      type="button"
    >
      <svg
        class=""
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
        width="14"
      >
        <path
          d="M19 12H5M12 19l-7-7 7-7"
        />
      </svg>
       
      All jobs
    </button>
    <header
      class="mb-6"
    >
      <div
        class="flex items-start gap-4 mb-4"
      >
        <div
          class="inline-flex items-center justify-center rounded-full font-semibold text-white shrink-0"
          style="width: 56px; height: 56px; font-size: 21.28px; background: linear-gradient(135deg, var(--green-600), var(--copper-500));"
        >
          AZ
        </div>
        <div
          class="min-w-0 flex-1"
        >
          <p
            class="text-sm font-medium mb-1"
            style="color: var(--muted);"
          >
            ACME Zambia
          </p>
          <h1
            class="font-display text-3xl md:text-4xl"
            style="letter-spacing: -0.015em; line-height: 1.1;"
          >
            Software Engineer
          </h1>
        </div>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <span
          class="inline-flex items-center rounded-full font-medium text-green-500 dark:text-green-400 text-xs px-3 py-1"
        >
          Closes in 194 days
        </span>
        <span
          class="inline-flex items-center rounded-full px-3 py-1 text-xs font-medium bg-muted/50 text-foreground/90 border border-border/60"
        >
          Full time
        </span>
        <span
          class="inline-flex items-center rounded-full px-3 py-1 text-xs font-medium bg-muted/50 text-foreground/90 border border-border/60"
        >
          Hybrid
        </span>
        <span
          class="inline-flex items-center rounded-full px-3 py-1 text-xs font-medium bg-muted/50 text-foreground/90 border border-border/60"
        >
          <svg
            class="mr-1 opacity-70"
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.75"
            viewBox="0 0 24 24"
            width="12"
          >
            <path
              d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0zM12 13a3 3 0 100-6 3 3 0 000 6z"
            />
          </svg>
          Lusaka
        </span>
      </div>
    </header>
    <div
      class="grid grid-cols-1 lg:grid-cols-[minmax(0,1fr)_minmax(280px,320px)] gap-8 lg:gap-10"
    >
      <aside
        class="order-1 lg:order-2 lg:sticky lg:top-6 lg:self-start"
      >
        <div
          class="rounded-2xl border p-6 text-center"
          style="border-color: var(--line); background: var(--bg-2);"
        >
          <p
            class="text-sm font-medium mb-2"
            style="color: var(--ink);"
          >
            See your match score
          </p>
          <p
            class="text-xs leading-relaxed mb-4"
            style="color: var(--muted);"
          >
            Sign in and upload your CV to unlock AI match breakdowns for every role.
          </p>
          <a
            class="btn btn-outline btn-sm inline-flex"
            href="/auth"
          >
            Sign in
          </a>
        </div>
      </aside>
      <div
        class="order-2 lg:order-1 min-w-0"
      >
        <div
          class="flex flex-col sm:flex-row flex-wrap gap-3 mb-8"
        >
          <a
            class="btn btn-primary flex-1 sm:flex-none sm:min-w-[200px] justify-center gap-2"
            data-testid="job-detail-apply-primary"
            href="https://example.com/apply"
            rel="noopener noreferrer"
            target="_blank"
          >
            Apply on company site
            <svg
              class=""
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.75"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6M15 3h6v6M10 14L21 3"
              />
            </svg>
          </a>
          <button
            aria-label="Save job"
            class="btn btn-outline btn-sm gap-1.5 flex-1 sm:flex-none justify-center"
            style="opacity: 1;"
            title="Save this job"
            type="button"
          >
            <svg
              class=""
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.75"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M19 21l-7-5-7 5V5a2 2 0 012-2h10a2 2 0 012 2z"
              />
            </svg>
            <span>
              Save
            </span>
          </button>
          <button
            class="btn btn-outline flex-1 sm:flex-none justify-center gap-1.5"
            type="button"
          >
            <svg
              class=""
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.75"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M12 3v1m0 16v1m-8-9H3m18 0h-1m-2.636-6.364l-.707.707M6.343 17.657l-.707.707m0-12.728l.707.707m11.314 11.314l.707.707M12 8a4 4 0 100 8 4 4 0 000-8z"
              />
            </svg>
             Generate cover letter
          </button>
          <a
            class="btn btn-ghost flex-1 sm:flex-none justify-center gap-1.5"
            href="/profile/cv-builder?jobId=j1&jobTitle=Software%20Engineer&company=ACME%20Zambia"
          >
            <svg
              class=""
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.75"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M14 2H6a2 2 0 00-2 2v16a2 2 0 002 2h12a2 2 0 002-2V8zM14 2v6h6"
              />
            </svg>
             Tailored CV
          </a>
        </div>
        <section
          aria-label="Share this job"
          class="mb-8"
        >
          <h3
            class="text-xs font-bold tracking-widest uppercase text-muted-foreground mb-3"
          >
            Share
          </h3>
          <div
            aria-label="Share this job"
            class="share-buttons"
            role="group"
          >
            <a
              aria-label="Share on WhatsApp"
              class="share-btn"
              data-plausible-event-name="job_share_whatsapp"
              href="https://wa.me/?text=Software%20Engineer%20%E2%80%94%20ACME%20Zambia%20%C2%B7%20Lusaka%0A%0AView%20on%20ZedApply%3A%20https%3A%2F%2Fwww.zedapply.com%2Fjobs%2Fj1"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class=""
                fill="currentColor"
                height="16"
                stroke="none"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347z M12 2C6.477 2 2 6.477 2 12c0 1.89.525 3.66 1.438 5.168L2 22l4.832-1.438A9.955 9.955 0 0012 22c5.523 0 10-4.477 10-10S17.523 2 12 2z"
                />
              </svg>
              WhatsApp
            </a>
            <a
              aria-label="Share on LinkedIn"
              class="share-btn"
              data-plausible-event-name="job_share_linkedin"
              href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fwww.zedapply.com%2Fjobs%2Fj1"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class=""
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.75"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-4 0v7h-4v-7a6 6 0 016-6zM2 9h4v12H2zM4 6a2 2 0 100-4 2 2 0 000 4z"
                />
              </svg>
              LinkedIn
            </a>
            <a
              aria-label="Share on Facebook"
              class="share-btn"
              data-plausible-event-name="job_share_facebook"
              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.zedapply.com%2Fjobs%2Fj1"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class=""
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.75"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"
                />
              </svg>
              Facebook
            </a>
            <a
              aria-label="Share on X"
              class="share-btn"
              data-plausible-event-name="job_share_twitter"
              href="https://twitter.com/intent/tweet?text=Software%20Engineer%20%E2%80%94%20ACME%20Zambia%20%C2%B7%20Lusaka%0A%0AView%20on%20ZedApply%3A%20https%3A%2F%2Fwww.zedapply.com%2Fjobs%2Fj1&url=https%3A%2F%2Fwww.zedapply.com%2Fjobs%2Fj1"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class=""
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.75"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M18 6L6 18M6 6l12 12"
                />
              </svg>
              X
            </a>
            <button
              aria-label="Copy job link"
              class="share-btn"
              data-plausible-event-name="job_share_copy"
              type="button"
            >
              <svg
                class=""
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.75"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M10 13a5 5 0 007.54.54l3-3a5 5 0 00-7.07-7.07l-1.72 1.71M14 11a5 5 0 00-7.54-.54l-3 3a5 5 0 007.07 7.07l1.71-1.71"
                />
              </svg>
              Copy link
            </button>
          </div>
        </section>
        <section
          class="mb-8"
        >
          <h3
            class="text-xs font-bold tracking-widest uppercase text-muted-foreground mb-3"
          >
            Required skills
          </h3>
          <div
            class="flex flex-wrap gap-1.5"
          >
            <span
              class="tag tag-mono"
            >
              python
            </span>
            <span
              class="tag tag-mono"
            >
              fastapi
            </span>
          </div>
        </section>
        <section
          class="mb-8"
        >
          <h3
            class="text-xs font-bold tracking-widest uppercase text-muted-foreground mb-3"
          >
            About the role
          </h3>
          <div
            class="job-description-markdown prose prose-zinc max-w-none text-sm dark:prose-invert prose-headings:mt-8 prose-headings:mb-3 prose-p:my-4 prose-li:my-1 prose-h2:text-base prose-h3:text-sm"
          >
            <h3
              class="job-description-heading font-bold tracking-widest uppercase text-muted-foreground text-[11px] mt-6 mb-2 opacity-90"
            >
              Role
            </h3>
            

            <p
              class="my-2 leading-relaxed whitespace-pre-line"
            >
              Build APIs.
            </p>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`Job detail responsive layout > matches 1024px desktop snapshot 1`] = `
<div
  data-testid="viewport-root"
  style="width: 1024px; max-width: 1024px;"
>
  <div
    class="p-6 md:p-8"
  >
    <button
      class="btn btn-ghost btn-sm mb-6"
      type="button"
    >
      <svg
        class=""
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
        width="14"
      >
        <path
          d="M19 12H5M12 19l-7-7 7-7"
        />
      </svg>
       
      All jobs
    </button>
    <header
      class="mb-6"
    >
      <div
        class="flex items-start gap-4 mb-4"
      >
        <div
          class="inline-flex items-center justify-center rounded-full font-semibold text-white shrink-0"
          style="width: 56px; height: 56px; font-size: 21.28px; background: linear-gradient(135deg, var(--green-600), var(--copper-500));"
        >
          AZ
        </div>
        <div
          class="min-w-0 flex-1"
        >
          <p
            class="text-sm font-medium mb-1"
            style="color: var(--muted);"
          >
            ACME Zambia
          </p>
          <h1
            class="font-display text-3xl md:text-4xl"
            style="letter-spacing: -0.015em; line-height: 1.1;"
          >
            Software Engineer
          </h1>
        </div>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <span
          class="inline-flex items-center rounded-full font-medium text-green-500 dark:text-green-400 text-xs px-3 py-1"
        >
          Closes in 194 days
        </span>
        <span
          class="inline-flex items-center rounded-full px-3 py-1 text-xs font-medium bg-muted/50 text-foreground/90 border border-border/60"
        >
          Full time
        </span>
        <span
          class="inline-flex items-center rounded-full px-3 py-1 text-xs font-medium bg-muted/50 text-foreground/90 border border-border/60"
        >
          Hybrid
        </span>
        <span
          class="inline-flex items-center rounded-full px-3 py-1 text-xs font-medium bg-muted/50 text-foreground/90 border border-border/60"
        >
          <svg
            class="mr-1 opacity-70"
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.75"
            viewBox="0 0 24 24"
            width="12"
          >
            <path
              d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0zM12 13a3 3 0 100-6 3 3 0 000 6z"
            />
          </svg>
          Lusaka
        </span>
      </div>
    </header>
    <div
      class="grid grid-cols-1 lg:grid-cols-[minmax(0,1fr)_minmax(280px,320px)] gap-8 lg:gap-10"
    >
      <aside
        class="order-1 lg:order-2 lg:sticky lg:top-6 lg:self-start"
      >
        <div
          class="rounded-2xl border p-6 text-center"
          style="border-color: var(--line); background: var(--bg-2);"
        >
          <p
            class="text-sm font-medium mb-2"
            style="color: var(--ink);"
          >
            See your match score
          </p>
          <p
            class="text-xs leading-relaxed mb-4"
            style="color: var(--muted);"
          >
            Sign in and upload your CV to unlock AI match breakdowns for every role.
          </p>
          <a
            class="btn btn-outline btn-sm inline-flex"
            href="/auth"
          >
            Sign in
          </a>
        </div>
      </aside>
      <div
        class="order-2 lg:order-1 min-w-0"
      >
        <div
          class="flex flex-col sm:flex-row flex-wrap gap-3 mb-8"
        >
          <a
            class="btn btn-primary flex-1 sm:flex-none sm:min-w-[200px] justify-center gap-2"
            data-testid="job-detail-apply-primary"
            href="https://example.com/apply"
            rel="noopener noreferrer"
            target="_blank"
          >
            Apply on company site
            <svg
              class=""
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.75"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6M15 3h6v6M10 14L21 3"
              />
            </svg>
          </a>
          <button
            aria-label="Save job"
            class="btn btn-outline btn-sm gap-1.5 flex-1 sm:flex-none justify-center"
            style="opacity: 1;"
            title="Save this job"
            type="button"
          >
            <svg
              class=""
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.75"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M19 21l-7-5-7 5V5a2 2 0 012-2h10a2 2 0 012 2z"
              />
            </svg>
            <span>
              Save
            </span>
          </button>
          <button
            class="btn btn-outline flex-1 sm:flex-none justify-center gap-1.5"
            type="button"
          >
            <svg
              class=""
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.75"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M12 3v1m0 16v1m-8-9H3m18 0h-1m-2.636-6.364l-.707.707M6.343 17.657l-.707.707m0-12.728l.707.707m11.314 11.314l.707.707M12 8a4 4 0 100 8 4 4 0 000-8z"
              />
            </svg>
             Generate cover letter
          </button>
          <a
            class="btn btn-ghost flex-1 sm:flex-none justify-center gap-1.5"
            href="/profile/cv-builder?jobId=j1&jobTitle=Software%20Engineer&company=ACME%20Zambia"
          >
            <svg
              class=""
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.75"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M14 2H6a2 2 0 00-2 2v16a2 2 0 002 2h12a2 2 0 002-2V8zM14 2v6h6"
              />
            </svg>
             Tailored CV
          </a>
        </div>
        <section
          aria-label="Share this job"
          class="mb-8"
        >
          <h3
            class="text-xs font-bold tracking-widest uppercase text-muted-foreground mb-3"
          >
            Share
          </h3>
          <div
            aria-label="Share this job"
            class="share-buttons"
            role="group"
          >
            <a
              aria-label="Share on WhatsApp"
              class="share-btn"
              data-plausible-event-name="job_share_whatsapp"
              href="https://wa.me/?text=Software%20Engineer%20%E2%80%94%20ACME%20Zambia%20%C2%B7%20Lusaka%0A%0AView%20on%20ZedApply%3A%20https%3A%2F%2Fwww.zedapply.com%2Fjobs%2Fj1"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class=""
                fill="currentColor"
                height="16"
                stroke="none"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347z M12 2C6.477 2 2 6.477 2 12c0 1.89.525 3.66 1.438 5.168L2 22l4.832-1.438A9.955 9.955 0 0012 22c5.523 0 10-4.477 10-10S17.523 2 12 2z"
                />
              </svg>
              WhatsApp
            </a>
            <a
              aria-label="Share on LinkedIn"
              class="share-btn"
              data-plausible-event-name="job_share_linkedin"
              href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fwww.zedapply.com%2Fjobs%2Fj1"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class=""
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.75"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-4 0v7h-4v-7a6 6 0 016-6zM2 9h4v12H2zM4 6a2 2 0 100-4 2 2 0 000 4z"
                />
              </svg>
              LinkedIn
            </a>
            <a
              aria-label="Share on Facebook"
              class="share-btn"
              data-plausible-event-name="job_share_facebook"
              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.zedapply.com%2Fjobs%2Fj1"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class=""
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.75"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"
                />
              </svg>
              Facebook
            </a>
            <a
              aria-label="Share on X"
              class="share-btn"
              data-plausible-event-name="job_share_twitter"
              href="https://twitter.com/intent/tweet?text=Software%20Engineer%20%E2%80%94%20ACME%20Zambia%20%C2%B7%20Lusaka%0A%0AView%20on%20ZedApply%3A%20https%3A%2F%2Fwww.zedapply.com%2Fjobs%2Fj1&url=https%3A%2F%2Fwww.zedapply.com%2Fjobs%2Fj1"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class=""
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.75"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M18 6L6 18M6 6l12 12"
                />
              </svg>
              X
            </a>
            <button
              aria-label="Copy job link"
              class="share-btn"
              data-plausible-event-name="job_share_copy"
              type="button"
            >
              <svg
                class=""
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.75"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M10 13a5 5 0 007.54.54l3-3a5 5 0 00-7.07-7.07l-1.72 1.71M14 11a5 5 0 00-7.54-.54l-3 3a5 5 0 007.07 7.07l1.71-1.71"
                />
              </svg>
              Copy link
            </button>
          </div>
        </section>
        <section
          class="mb-8"
        >
          <h3
            class="text-xs font-bold tracking-widest uppercase text-muted-foreground mb-3"
          >
            Required skills
          </h3>
          <div
            class="flex flex-wrap gap-1.5"
          >
            <span
              class="tag tag-mono"
            >
              python
            </span>
            <span
              class="tag tag-mono"
            >
              fastapi
            </span>
          </div>
        </section>
        <section
          class="mb-8"
        >
          <h3
            class="text-xs font-bold tracking-widest uppercase text-muted-foreground mb-3"
          >
            About the role
          </h3>
          <div
            class="job-description-markdown prose prose-zinc max-w-none text-sm dark:prose-invert prose-headings:mt-8 prose-headings:mb-3 prose-p:my-4 prose-li:my-1 prose-h2:text-base prose-h3:text-sm"
          >
            <h3
              class="job-description-heading font-bold tracking-widest uppercase text-muted-foreground text-[11px] mt-6 mb-2 opacity-90"
            >
              Role
            </h3>
            

            <p
              class="my-2 leading-relaxed whitespace-pre-line"
            >
              Build APIs.
            </p>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;
